Añadidos cambios en lo microservicios para los fallos de sonar.